# meta-data-api

./: .env  Cargo.toml  Procfile
migrations/2021-07-06-111009_create_cards/: up.sql
src/: db.rs  main.rs  schema.rs
src/handlers/: cards.rs  mod.rs
src/models/: cards.rs
src/serializers/: cards.rs
