[package]
name = "meta-api"
version = "0.1.0"
edition = "2018"

[dependencies]
diesel = { version = "^1.4.7", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[[bin]]
name = "sentinel"
path = "src/sentinel.rs"
